Fixed css issues around line spacing
git-svn-id: https://plugins.svn.wordpress.org/on-site-google-analytics/trunk@261803 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/on-site-google-analytics/css/seoatl-on-site-ga.css
+++ b/on-site-google-analytics/css/seoatl-on-site-ga.css
@@ -18,6 +18,7 @@ font-size:12px;
 line-height:12px;
 }
 
+div#onsite-ga-plugin li {margin:0;line-height:14px;font-size:10px;}
 div#onsite-ga-plugin div.onsite-ga-referring-sites a {color:#0066CC}
 
 div#onsite-ga-plugin-inner img {border:none;}
